--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
+    "react": "^18.0.0-rc.0",
+    "react-dom": "^18.0.0-rc.0",
+    "react-router": "^6.2.1",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
